// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheDAG Check for acyclicity and get topologically sorted array 1`] = `
Object {
  "isAcyclic": true,
  "topologicallySortedNodeIDs": Array [
    1,
    3,
    4,
    5,
    6,
    2,
    7,
    8,
  ],
}
`;

exports[`TheDAG Create simple graph  1`] = `
Object {
  "edges": Object {
    "1_2": Object {
      "edgeData": Object {},
      "edgeID": "1_2",
      "sourceID": 1,
      "targetID": 2,
    },
  },
  "nodes": Object {
    "1": Object {
      "id": 1,
      "nodeData": undefined,
      "nodeID": 1,
      "possibleSources": Array [],
      "possibleTargets": Array [
        2,
      ],
    },
    "2": Object {
      "id": 2,
      "nodeData": undefined,
      "nodeID": 2,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`TheDAG Get all DAG edges 1`] = `
Object {
  "1_3": Object {
    "edgeData": Object {
      "some": "edgeData",
    },
    "edgeID": "1_3",
    "sourceID": 1,
    "targetID": 3,
  },
  "1_4": Object {
    "edgeData": Object {},
    "edgeID": "1_4",
    "sourceID": 1,
    "targetID": 4,
  },
  "3_5": Object {
    "edgeData": Object {},
    "edgeID": "3_5",
    "sourceID": 3,
    "targetID": 5,
  },
  "3_6": Object {
    "edgeData": Object {},
    "edgeID": "3_6",
    "sourceID": 3,
    "targetID": 6,
  },
  "4_2": Object {
    "edgeData": Object {},
    "edgeID": "4_2",
    "sourceID": 4,
    "targetID": 2,
  },
  "4_7": Object {
    "edgeData": Object {},
    "edgeID": "4_7",
    "sourceID": 4,
    "targetID": 7,
  },
  "5_8": Object {
    "edgeData": Object {},
    "edgeID": "5_8",
    "sourceID": 5,
    "targetID": 8,
  },
}
`;

exports[`TheDAG Get all DAG nodes: Get all DAG nodes 1`] = `
Object {
  "1": Object {
    "id": 1,
    "nodeData": Object {
      "some": "data",
    },
    "nodeID": 1,
    "possibleSources": Array [],
    "possibleTargets": Array [
      3,
      4,
    ],
  },
  "2": Object {
    "id": 2,
    "nodeData": Object {
      "some": "otherData",
    },
    "nodeID": 2,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  "3": Object {
    "id": 3,
    "nodeData": Object {},
    "nodeID": 3,
    "possibleSources": Array [],
    "possibleTargets": Array [
      5,
      6,
    ],
  },
  "4": Object {
    "id": 4,
    "nodeData": Object {},
    "nodeID": 4,
    "possibleSources": Array [],
    "possibleTargets": Array [
      2,
      7,
    ],
  },
  "5": Object {
    "id": 5,
    "nodeData": Object {},
    "nodeID": 5,
    "possibleSources": Array [],
    "possibleTargets": Array [
      8,
    ],
  },
  "6": Object {
    "id": 6,
    "nodeData": Object {},
    "nodeID": 6,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  "7": Object {
    "id": 7,
    "nodeData": Object {},
    "nodeID": 7,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  "8": Object {
    "id": 8,
    "nodeData": Object {},
    "nodeID": 8,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
}
`;

exports[`TheDAG Get edge by loose source and target  1`] = `
Object {
  "edgeFromOneToThree": Object {
    "edgeData": Object {
      "some": "edgeData",
    },
    "edgeID": "1_3",
    "sourceID": 1,
    "targetID": 3,
  },
}
`;

exports[`TheDAG Get node by id: Get node by id 1`] = `
Object {
  "id": 1,
  "nodeData": Object {
    "some": "data",
  },
  "nodeID": 1,
  "possibleSources": Array [],
  "possibleTargets": Array [
    3,
    4,
  ],
}
`;

exports[`TheDAG Get nodes by relative distance 1`] = `
Array [
  Object {
    "hops": 2,
    "nodeID": 5,
  },
  Object {
    "hops": 2,
    "nodeID": 6,
  },
  Object {
    "hops": 2,
    "nodeID": 2,
  },
  Object {
    "hops": 2,
    "nodeID": 7,
  },
]
`;

exports[`TheDAG Traverse the graph breadth first 1`] = `
Array [
  Object {
    "hops": 0,
    "nodeID": 1,
  },
  Object {
    "hops": 1,
    "nodeID": 3,
  },
  Object {
    "hops": 1,
    "nodeID": 4,
  },
  Object {
    "hops": 2,
    "nodeID": 5,
  },
  Object {
    "hops": 2,
    "nodeID": 6,
  },
  Object {
    "hops": 2,
    "nodeID": 2,
  },
  Object {
    "hops": 2,
    "nodeID": 7,
  },
  Object {
    "hops": 3,
    "nodeID": 8,
  },
]
`;

exports[`TheDAG Traverse the graph breadth first 2`] = `
Array [
  Array [
    Object {
      "hops": 0,
      "nodeID": 1,
    },
  ],
  Array [
    Object {
      "hops": 1,
      "nodeID": 3,
    },
  ],
  Array [
    Object {
      "hops": 1,
      "nodeID": 4,
    },
  ],
  Array [
    Object {
      "hops": 2,
      "nodeID": 5,
    },
  ],
  Array [
    Object {
      "hops": 2,
      "nodeID": 6,
    },
  ],
  Array [
    Object {
      "hops": 2,
      "nodeID": 2,
    },
  ],
  Array [
    Object {
      "hops": 2,
      "nodeID": 7,
    },
  ],
  Array [
    Object {
      "hops": 3,
      "nodeID": 8,
    },
  ],
]
`;

exports[`TheDAG Traverse the graph depth first using generators 1`] = `
Array [
  Object {
    "id": 3,
    "nodeData": Object {},
    "nodeID": 3,
    "possibleSources": Array [],
    "possibleTargets": Array [
      5,
      6,
    ],
  },
  Object {
    "id": 5,
    "nodeData": Object {},
    "nodeID": 5,
    "possibleSources": Array [],
    "possibleTargets": Array [
      8,
    ],
  },
  Object {
    "id": 8,
    "nodeData": Object {},
    "nodeID": 8,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  Object {
    "id": 6,
    "nodeData": Object {},
    "nodeID": 6,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  Object {
    "id": 4,
    "nodeData": Object {},
    "nodeID": 4,
    "possibleSources": Array [],
    "possibleTargets": Array [
      2,
      7,
    ],
  },
  Object {
    "id": 2,
    "nodeData": Object {
      "some": "otherData",
    },
    "nodeID": 2,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
  Object {
    "id": 7,
    "nodeData": Object {},
    "nodeID": 7,
    "possibleSources": Array [],
    "possibleTargets": Array [],
  },
]
`;

exports[`TheDAG Traverse the graph however you want 1`] = `
Object {
  "done": false,
  "value": Object {
    "visitedNode": Object {
      "id": 3,
      "nodeData": Object {},
      "nodeID": 3,
      "possibleSources": Array [],
      "possibleTargets": Array [
        5,
        6,
      ],
    },
  },
}
`;

exports[`TheDAG Traverse the graph however you want 2`] = `
Object {
  "done": false,
  "value": Object {
    "visitedNode": Object {
      "id": 5,
      "nodeData": Object {},
      "nodeID": 5,
      "possibleSources": Array [],
      "possibleTargets": Array [
        8,
      ],
    },
  },
}
`;

exports[`TheDAG can create less simple graph 1`] = `
Object {
  "edges": Object {
    "1_3": Object {
      "edgeData": Object {
        "some": "edgeData",
      },
      "edgeID": "1_3",
      "sourceID": 1,
      "targetID": 3,
    },
    "1_4": Object {
      "edgeData": Object {},
      "edgeID": "1_4",
      "sourceID": 1,
      "targetID": 4,
    },
    "3_5": Object {
      "edgeData": Object {},
      "edgeID": "3_5",
      "sourceID": 3,
      "targetID": 5,
    },
    "3_6": Object {
      "edgeData": Object {},
      "edgeID": "3_6",
      "sourceID": 3,
      "targetID": 6,
    },
    "4_2": Object {
      "edgeData": Object {},
      "edgeID": "4_2",
      "sourceID": 4,
      "targetID": 2,
    },
    "4_7": Object {
      "edgeData": Object {},
      "edgeID": "4_7",
      "sourceID": 4,
      "targetID": 7,
    },
    "5_8": Object {
      "edgeData": Object {},
      "edgeID": "5_8",
      "sourceID": 5,
      "targetID": 8,
    },
  },
  "nodes": Object {
    "1": Object {
      "id": 1,
      "nodeData": Object {
        "some": "data",
      },
      "nodeID": 1,
      "possibleSources": Array [],
      "possibleTargets": Array [
        3,
        4,
      ],
    },
    "2": Object {
      "id": 2,
      "nodeData": Object {
        "some": "otherData",
      },
      "nodeID": 2,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
    "3": Object {
      "id": 3,
      "nodeData": Object {},
      "nodeID": 3,
      "possibleSources": Array [],
      "possibleTargets": Array [
        5,
        6,
      ],
    },
    "4": Object {
      "id": 4,
      "nodeData": Object {},
      "nodeID": 4,
      "possibleSources": Array [],
      "possibleTargets": Array [
        2,
        7,
      ],
    },
    "5": Object {
      "id": 5,
      "nodeData": Object {},
      "nodeID": 5,
      "possibleSources": Array [],
      "possibleTargets": Array [
        8,
      ],
    },
    "6": Object {
      "id": 6,
      "nodeData": Object {},
      "nodeID": 6,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
    "7": Object {
      "id": 7,
      "nodeData": Object {},
      "nodeID": 7,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
    "8": Object {
      "id": 8,
      "nodeData": Object {},
      "nodeID": 8,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`TheDAG exports 1`] = `[Function]`;

exports[`TheDAG import graph from any different format: import graph from any different format 1`] = `
Object {
  "edges": Object {
    "1_2": Object {
      "edgeData": Object {},
      "edgeID": "1_2",
      "sourceID": 1,
      "targetID": 2,
    },
    "2_3": Object {
      "edgeData": Object {},
      "edgeID": "2_3",
      "sourceID": 2,
      "targetID": 3,
    },
    "2_4": Object {
      "edgeData": Object {},
      "edgeID": "2_4",
      "sourceID": 2,
      "targetID": 4,
    },
  },
  "nodes": Object {
    "1": Object {
      "id": 1,
      "nodeData": 1,
      "nodeID": 1,
      "possibleSources": Array [],
      "possibleTargets": Array [
        2,
      ],
    },
    "2": Object {
      "id": 2,
      "nodeData": 2,
      "nodeID": 2,
      "possibleSources": Array [],
      "possibleTargets": Array [
        3,
        4,
      ],
    },
    "3": Object {
      "id": 3,
      "nodeData": 3,
      "nodeID": 3,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
    "4": Object {
      "id": 4,
      "nodeData": 4,
      "nodeID": 4,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
    "5": Object {
      "id": 5,
      "nodeData": 5,
      "nodeID": 5,
      "possibleSources": Array [],
      "possibleTargets": Array [],
    },
  },
}
`;

exports[`TheDAG is instantiatable 1`] = `
TheDAG {
  "stateManipulators": Object {
    "getState": [Function],
    "setState": [Function],
    "state": Object {
      "edges": Object {},
      "nodes": Object {},
    },
  },
}
`;
